--- a/practice_project_GDP.ipynb
+++ b/practice_project_GDP.ipynb
@@ -1071,11 +1071,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Load the DataFrame to the CSV file named \"Largest_economies.csv\"\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[43mdf\u001b[49m\u001b[38;5;241m.\u001b[39mto_csv(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mLargest_economies.csv\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'df' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "# Load the DataFrame to the CSV file named \"Largest_economies.csv\"\n"
+    "# Load the DataFrame to the CSV file named \"Largest_economies.csv\"\n",
+    "df.to_csv(\"Largest_economies.csv\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Notas personales\n",
+    "\n",
+    "Lo que me costó más trabajo:\n",
+    "- El acceso al html\n",
+    "- El salvado como csv\n",
+    "\n",
+    "Lo que ya se siente mejor:\n",
+    "- Manipulación de df\n",
+    "- lógica de programación"
    ]
   },
   {
